Fixed Mission Container Not overlap with Our Services Container

--- a/Home/home.css
+++ b/Home/home.css
@@ -275,80 +275,50 @@ navigation menu opens in mobile phones */
 
 /* styling for our mission container  */
 .mission{
-    
-    align-items: center;
-    width: 100%;
-    height: 500px;
-    position: relative;
+
     z-index: 30;
-    
+    text-align: center;
+    margin: 20px 0px;    
+    background: url('images/mission-bg.svg') no-repeat center center/cover;
+    background-size: 100vw;
 }
 .mission h2{
-    position: relative;
-    width: 100%;
-
-    height: 50px;
-    z-index: 30;
-    text-align: center;
     font-size: 2.5rem;
+    font-weight: bold;
 }
-
 .mission p{
-    max-width: 800px;
-    margin: 50px auto;
-    position: relative;
-    text-align: center;
-    padding: 0px 10px;
-    font-size: 6vw;
-    z-index: 30;
-    overflow: hidden;
+    max-width: 550px;
+    margin: auto;
+    padding: 14px;
 }
 
-.mission img{
-    position: relative;
-    bottom: 110vw;
-    align-items: center;
-    justify-content: center;
-    z-index: 29;
-    opacity: 0.4;
-}
-
-/* font size fixed for 500px or above width  */
 @media only screen and (min-width: 500px){
+    .mission{
+        background-size: 700px 2000px;
+    }
     .mission p{
         font-size: 30px;
     }
 }
-
 /* styling the our services section  */
 #ourserv{
-
+    z-index: 30;
     position: relative;
-    top: 50px;
     flex-direction: column;
     font-family: 'Baloo Bhai 2', cursive;
+    margin: 40px 0px;
 }
 
 /* "Our Services" heading styling */
 #ourserv h2{
+    position: relative;
     width: 100%;
     z-index: 30;
     text-align: center;
     font-size: 2.5rem;
+    font-weight: bold;
 }
 
-/* height of mission container and bottom of over services container 
-changed for width 321px or above */
-@media only screen and (max-width: 321px) {
-    .mission{
-        height: 410px;
-        bottom: 50px;
-    }
-    #ourserv{
-        top: 0px;
-        bottom: 100px;
-    }
-}
 
 #ourserimgs{
     display: flex;
